crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-dataset-multi_embeddings_megascience_keywords_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
      },
      "primary_key": {
        "id": 1277
      },
      "score": 0.68
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": "To find the product of 8 and 2, multiply the two numbers together: \\(8 \\times 2 = 16\\). The answer is \\(\\boxed{16}\\)."
      },
      "primary_key": {
        "id": 1075
      },
      "score": 0.64
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": "To find the product of 12 and 0.1, multiply the two numbers:\n\\[ 12 \\times 0.1 = 1.2 \\]\nThus, the product is \\(\\boxed{1.2}\\)."
      },
      "primary_key": {
        "id": 1055
      },
      "score": 0.64
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": "When multiplying two negative numbers, the product is positive. Thus:  \n$-18(-2) = 36$.  \nThe answer is $\\boxed{36}$."
      },
      "primary_key": {
        "id": 605
      },
      "score": 0.64
    }
  ]
}
