crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-dataset-multi_embeddings_megascience_vector_search_sql_basic_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(_score, 3) FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                       |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, trunc(vector_search(qs, Utf8("second"), answer)._score,Int64(3))                                                                               |
|               |   Sort: vector_search(qs, Utf8("second"), answer)._score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id ASC NULLS LAST, fetch=4                                                                                                            |
|               |     Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, trunc(vector_search(qs, Utf8("second"), answer)._score, Int64(3)), vector_search(qs, Utf8("second"), answer)._score                        |
|               |       TableScan: vector_search(qs, Utf8("second"), answer) projection=[id, answer, _score]                                                                                                                                                                 |
| physical_plan | ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(vector_search(qs, Utf8("second"), answer)._score,Int64(3))@2 as trunc(vector_search(qs, Utf8("second"), answer)._score,Int64(3))]                                                              |
|               |   SortPreservingMergeExec: [_score@3 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                                                   |
|               |     SortExec: TopK(fetch=4), expr=[_score@3 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                       |
|               |       ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(_score@2, 3) as trunc(vector_search(qs, Utf8("second"), answer)._score,Int64(3)), _score@2 as _score]                                                                                    |
|               |         SortExec: TopK(fetch=1000), expr=[_score@2 DESC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                          |
|               |           ProjectionExec: expr=[id@0 as id, answer@1 as answer, 1 - cosine_distance(CAST(query_vector() AS List(Field { data_type: Float32, nullable: true })), CAST(answer_embedding@2 AS List(Field { data_type: Float32, nullable: true }))) as _score] |
|               |             SchemaCastScanExec                                                                                                                                                                                                                             |
|               |               CooperativeExec                                                                                                                                                                                                                              |
|               |                 BytesProcessedExec                                                                                                                                                                                                                         |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                     |
|               |                     CooperativeExec                                                                                                                                                                                                                        |
|               |                       DuckSqlExec sql= SELECT "id", "answer", "answer_embedding" FROM "qs"                                                                                                                                                                 |
|               |                                                                                                                                                                                                                                                            |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
